--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="PrintSmart" />
     <meta property="og:description" content="PrintSmart: Elevate your prints with our elegant design and premium service, inspired by Apple’s aesthetic for clarity and style." />
-    <meta property="og:image" content="https://mocha-cdn.com/og.png" type="image/png" />
-    <meta property="og:url" content="https://x2dyuka2nbdjw.mocha.app" />
+    <meta property="og:image" content="https://app.diginweb.site/create/uploads/medialibrary/86648c1e55_355.png" type="image/png" />
+    <meta property="og:url" content="" />
     <meta property="og:type" content="website" />
     <meta property="og:author" content="Cwkr" />
     <meta property="og:site_name" content="PrintSmart" />
@@ -14,9 +14,9 @@
     <meta property="twitter:site" content="" />
     <meta property="twitter:title" content="PrintSmart" />
     <meta property="twitter:description" content="PrintSmart: Elevate your prints with our elegant design and premium service, inspired by Apple’s aesthetic for clarity and style." />
-    <meta property="twitter:image" content="https://mocha-cdn.com/og.png" type="image/png" />
-    <link rel="shortcut icon" href="https://mocha-cdn.com/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" sizes="180x180" href="https://mocha-cdn.com/apple-touch-icon.png" type="image/png" />
+    <meta property="twitter:image" content="https://app.diginweb.site/create/uploads/medialibrary/86648c1e55_355.png" type="image/png" />
+    <link rel="shortcut icon" href="https://app.diginweb.site/create/uploads/medialibrary/86648c1e55_355.png" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://app.diginweb.site/create/uploads/medialibrary/86648c1e55_355.png" type="image/png" />
     <title>PrintSmart</title>
   </head>
   <body>
